Update and rename main/main.html to index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <img src="assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
      <div class="bar">
         <ul>
-            <li><a class="activebutton" href="main.html">Home</a></li>
+            <li><a class="activebutton" href="index.html">Home</a></li>
             <li><a class="defaultactive" href="cv.html">Resume</a></li>
             <li><a class="defaultactive" href="sources.html">Sources</a></li>
             <li class="time-right"><a id="mainDiv" class="activetime" href="https://time.is/">Date and Time</a></li>
