--- a/main/sources.html
+++ b/main/sources.html
@@ -121,7 +121,7 @@
     <img src="assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="mountain-image-size">
      <div class="bar">
         <ul>
-            <li><a class="defaultactive" href="main.html">Home</a></li>
+            <li><a class="defaultactive" href="index.html">Home</a></li>
             <li><a class="defaultactive" href="cv.html">Resume</a></li>
             <li><a class="activebutton" href="sources.html">Sources</a></li>
             <li class="time-right"><a id="mainDiv" class="activetime" href="https://time.is/">Date and Time</a></li>
