--- a/main/sources.html
+++ b/main/sources.html
@@ -122,8 +122,8 @@
      <div class="bar">
         <ul>
             <li><a class="defaultactive" href="index.html">Home</a></li>
-            <li><a class="defaultactive" href="cv.html">Resume</a></li>
-            <li><a class="activebutton" href="sources.html">Sources</a></li>
+            <li><a class="defaultactive" href="/main/cv.html">Resume</a></li>
+            <li><a class="activebutton" href="/main/sources.html">Sources</a></li>
             <li class="time-right"><a id="mainDiv" class="activetime" href="https://time.is/">Date and Time</a></li>
         </ul>
     </div>
