--- a/main/cv.html
+++ b/main/cv.html
@@ -134,10 +134,10 @@
     </script>
     
     <!--Button pressed will make the image appear-->
-    <script src="/js/button.js"></script>
+    <script src="/main/js/button.js"></script>
 </head>
 <body>
-    <img src="assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
+    <img src="/main/assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
      <div class="bar">
         <ul>
             <li><a class="defaultactive" href="index.html">Home</a></li>
@@ -154,7 +154,7 @@
         <br>
             <button type="button" onclick="image()" id="button-event" class="button">Show Resume</button>
         <br>
-        <img id="button-image" src="assets/cv.png" class="image-center" width="707" height="1000" alt="Resume sample">
+        <img id="button-image" src="/main/assets/cv.png" class="image-center" width="707" height="1000" alt="Resume sample">
     </div>
 </body>
 </html>
