--- a/main/cv.html
+++ b/main/cv.html
@@ -134,15 +134,15 @@
     </script>
     
     <!--Button pressed will make the image appear-->
-    <script src="/main/js/button.js"></script>
+    <script src="button.js"></script>
 </head>
 <body>
     <img src="/main/assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
      <div class="bar">
         <ul>
             <li><a class="defaultactive" href="index.html">Home</a></li>
-            <li><a class="activebutton" href="/main/cv.html">Resume</a></li>
-            <li><a class="defaultactive" href="/main/sources.html">Sources</a></li>
+            <li><a class="activebutton" href="cv.html">Resume</a></li>
+            <li><a class="defaultactive" href="sources.html">Sources</a></li>
             <li class="time-right"><a id="mainDiv" class="activetime" href="https://time.is/">Date and Time</a></li>
         </ul>
     </div>
@@ -154,7 +154,7 @@
         <br>
             <button type="button" onclick="image()" id="button-event" class="button">Show Resume</button>
         <br>
-        <img id="button-image" src="/main/assets/cv.png" class="image-center" width="707" height="1000" alt="Resume sample">
+        <img id="button-image" src="cv.png" class="image-center" width="707" height="1000" alt="Resume sample">
     </div>
 </body>
 </html>
