--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </script>
 </head>
 <body>
-    <img src="/main/assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
+    <img src="/assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
      <div class="bar">
         <ul>
             <li><a class="activebutton" href="index.html">Home</a></li>
@@ -167,7 +167,7 @@
             </div>
         </div>
             <div class="image">
-                <img class="image-size" height="400" src="/main/assets/max.png">
+                <img class="image-size" height="400" src="/assets/max.png">
             </div>
     </div>
 </body>
