--- a/sources.html
+++ b/sources.html
@@ -91,7 +91,7 @@
         
         @font-face{
             font-family: "Medodica";
-            src: url(/assets/MedodicaRegular.otf)
+            src: url(./assets/MedodicaRegular.otf)
         }
         
         /* Centering */
@@ -118,7 +118,7 @@
     </script>
 </head>
 <body>
-    <img src="/assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="mountain-image-size">
+    <img src="./assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="mountain-image-size">
      <div class="bar">
         <ul>
             <li><a class="defaultactive" href="index.html">Home</a></li>
