--- a/cv.html
+++ b/cv.html
@@ -134,7 +134,7 @@
     </script>
     
     <!--Button pressed will make the image appear-->
-    <script src="/js/button.js"></script>
+    <script src="./js/button.js"></script>
 </head>
 <body>
     <img src="./assets/mountains-topbar3.png" alt="Mountains from 2828 meters above!" class="image-size">
