--- a/sources.html
+++ b/sources.html
@@ -152,6 +152,9 @@
         <br>
         <br>
         The images and resume are created by me!
+        <br>
+        <br>
+        I might not update this website no longer because the project is already completed. Thanks for visiting this website!
     </div>
 </body>
 </html>
